[tool.poetry]
name = "python-logstash"
version = "0.4.7"
description = ""
authors = ["Thomas Kern <thomas.kern@meltwater.com>"]

packages = [
    { include = "logstash" },
    { include = "logstash/**/*.py" },
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

